--- a/themes/witty/css/global.css
+++ b/themes/witty/css/global.css
@@ -60,6 +60,78 @@ a{text-decoration: none;}
 	cursor:pointer;
 }
 
+/* Style des trois blocs en home */
+.blocJeu{
+	display:block;
+	width:90%;
+	margin-top:10px;
+	margin-left: auto;
+	margin-right: auto;
+	position: relative;
+	padding-bottom:0px;
+	height: auto;
+	cursor: pointer;
+}
+
+.blocJeu:hover .titre{
+	color:#d83028;
+}
+
+.blocJeu .image{
+	display:block;
+	margin-left: 0px;
+	margin-right: 15px;
+	position: relative;
+	background-color:#000;
+	height:84px;
+	width:84px;
+	float:left;
+	cursor:pointer;
+	margin-bottom:5px;
+}
+
+.blocJeu .infos{
+	margin-left:100px;
+}
+
+.blocJeu .texte{
+	padding-bottom:0px;
+}
+
+.blocJeu .infos .titre{
+	font-size:14px;
+	margin-bottom:10px;
+	cursor:pointer;
+}
+
+.blocJeu .voirFiche{
+	display:block;
+	margin-left: auto;
+	margin-right: auto;
+	position: relative;
+	font-family:"Arial", Helvetica, sans-serif;
+	font-size:11px;
+	color:#2f2f2f;
+	cursor:pointer;
+	float: left;
+	margin-top: 7px;
+}
+
+.blocJeu .voirFiche:hover{
+	text-decoration:underline;
+}
+
+.blocJeu .filet{
+	display:block;
+	background-color: #e2dddb;
+	height: 1px;
+	width:100%;
+	top:0px;
+	margin-left: auto;
+	margin-right: auto;
+	position: relative;
+}
+
 
 /******************** 
 * Zones spécifiques
@@ -650,7 +722,7 @@ div.star_hover a, div.star a:hover { background-position: 0 -32px }
 	font-size:14px;
 	color:#fff
 }
-#footer a {color:#fff}
+#footer a {color:#000}
 #footer a:hover {text-decoration:underline}
 #footer ul {list-style-type:none}
 #footer li {padding:7px 0}
@@ -664,6 +736,15 @@ div.star_hover a, div.star a:hover { background-position: 0 -32px }
 }
 #footer .myaccount .favoriteproducts img,
 #footer .myaccount .lnk_wishlist img {display:none}
+
+#footer .filet2{
+	display: block;
+	position:relative;
+	margin-left: 30px;
+	margin-top:17px;
+	float:left;
+	opacity:0.3;
+}
 
 /* ************************************************************************************************
 		PRODUCT PAGE
