--- a/themes/witty/css/modules/homeslider/bx_styles.css
+++ b/themes/witty/css/modules/homeslider/bx_styles.css
@@ -8,7 +8,7 @@
 .bx-window {margin-bottom:20px;}
 .bx-wrapper {
 	margin-bottom:20px;
-	height:300px
+	height:340px;
 }
  
 /*next button*/
@@ -48,6 +48,7 @@
 	font-size:11px;
 	color:#666;
 	text-align:center;
+	display:none;
 }
 .bx-pager a {
 	display:inline-block;
