--- a/themes/witty/css/product.css
+++ b/themes/witty/css/product.css
@@ -271,3 +271,21 @@
 a.pack_price{
 	float:right;
 }
+
+#bigpic{
+	width:600px;
+	margin-top:-100px;
+	margin-left: -53px;
+}
+
+/* Jeux du pack */
+#blockpack{
+	border-top: 1px solid #3D3D3D;
+}
+
+#blockpack .jeu .infos h2{
+	color: #3D3D3D;
+	font-family: "Arial",Helvetica,sans-serif;
+	font-size:2em;
+	font-weight: bold;
+}
