home + header CSS

--- a/modules/blockuserinfo/blockuserinfo.css
+++ b/modules/blockuserinfo/blockuserinfo.css
@@ -14,15 +14,14 @@
 
 /* cart */
 #shopping_cart {
-	
-	
-	
+	margin-top:15px;
+	margin-left:15px;
 }
 #shopping_cart a{
 	height: 15px;
 	padding:15px 27px 10px 43px;
-	background: url('img/icon/cart.gif') no-repeat 10px 9px #eee;
-	width: 130px;/* 200 */
+	background: url('img/icon/cart.gif') no-repeat 10px 9px;
+	width: 100px;/* 200 */
 	-moz-border-radius: 3px;
 	-webkit-border-radius: 3px;
 	border-radius: 3px;display:block}
@@ -37,25 +36,33 @@
 
 /* user infos */ 
 #header_user_info {
-	clear:both;
-	float:right;
-	margin-top:10px;
-	padding:0;
-	font-size:12px
+	float:left;
+	margin-left:30px;
+	font-size:12px;
+	display:block;
+	height:30px;
+	width:100px;
+	padding:40px 20px 0px 20px;
+	border-left:1px solid #e7e7e7;
+	border-right:1px solid #e7e7e7;
+	text-align:center;
+	font-family:"Arial", Helvetica, sans-serif;
+	font-weight:bold;
 }
+
+#header_user_info :hover{
+	text-decoration:underline;
+}
+
 #header_user_info a {
 	display:inline-block;
-	margin:0 0 0 10px;
-	padding:3px 0 0 34px;
+	padding-top:22px;
 	line-height: 11px;
-	border-left:1px solid #000
 }
 #header_user_info a.account {
 	border: none;
 	display: inline;
-	margin: 0;
-	padding: 0;
+	background: url('img/icon/login.gif') no-repeat 30px 0;
 }
 *:first-child+html #header_user_info a {line-height:14px;}
-#header_user_info a.login {background: url('img/icon/login.gif') no-repeat 10px 0}
-#header_user_info a.logout {background: url('img/icon/logout.png') no-repeat 10px -1px}
+#header_user_info a.login {background: url('img/icon/login.gif') no-repeat 30px 0}
