--- a/themes/witty/css/modules/blocksearch/blocksearch.css
+++ b/themes/witty/css/modules/blocksearch/blocksearch.css
@@ -11,24 +11,25 @@
 }
 #search_block_top{
 	display:block;
-	width:300px;
-	float:right;
+	width:285px;
+	float:left;
 	margin-right: 0px;
 	position: relative;
 	font-family:"Arial", Helvetica, sans-serif;
-	font-size:11px;
+	font-size:13px;
 	color:#9e9d9d;
-	margin-top:30px;
+	margin-top:18px;
+	margin-left:60px;
 }
 
 #searchbox input[type=text]{
 	float:left;
 	border:0;
-	width:260px;
-	height:80px;
+	width:249px;
+	height:35px;
 	background:url(images/champ_rechercher.png) top left no-repeat;
 	color:#9e9d9d;
-	padding:40px 0 0 65px;
+	padding:5px 0 0 40px;
 }
 
 #searchbox input[type=text]:focus{
@@ -38,8 +39,8 @@
 #searchbox input[type=submit]{
 	float:left;
 	border:0;
-	width:40px;
-	height:80px;
+	width:35px;
+	height:35px;
 	background:url(images/champ_rechercher.png) top right no-repeat;
 	cursor:pointer;
 }
