--- a/themes/witty/css/modules/blockuserinfo/blockuserinfo.css
+++ b/themes/witty/css/modules/blockuserinfo/blockuserinfo.css
@@ -33,7 +33,7 @@
 	-moz-border-radius: 3px;
 	-webkit-border-radius: 3px;
 	border-radius: 3px;display:block}
-#shopping_cart a:hover span{text-decoration: none}
+#shopping_cart a:hover span{text-decoration: underline}
 #header_user #shopping_cart .ajax_cart_quantity { font-weight:bold; font-size:18px }
 #header_user #shopping_cart .ajax_cart_total { display:none !important; }
 
