--- a/modules/wittyblockbestsellers/static/css/wittyblockbestsellers.css
+++ b/modules/wittyblockbestsellers/static/css/wittyblockbestsellers.css
@@ -18,9 +18,20 @@ section.meilleuresVentes{
 	background-image: url(../images/titre_bloc_meilleuresVentes_normal.png);
 	height:77px;
 	width:324px;
-	cursor:default;
 }
 
 .meilleuresVentes .titreMeilleuresVentes:hover{
 	background-image: url(../images/titre_bloc_meilleuresVentes_hover.png);
+}
+
+.meilleuresVentes .prix{
+	display:block;
+	margin-left: auto;
+	margin-right: 10px;
+	position: relative;
+	font-family:"Arial", Helvetica, sans-serif;
+	font-size:20px;
+	float:right;
+	margin-top: 5px;
+	margin-bottom: 0px;
 }
