--- a/modules/wittyblocknewproducts/static/css/wittyblocknewproducts.css
+++ b/modules/wittyblocknewproducts/static/css/wittyblocknewproducts.css
@@ -18,9 +18,20 @@ section.nouveautes{
 	background-image: url(../images/titre_bloc_nouveaute_normal.png);
 	height:77px;
 	width:324px;
-	cursor:default;
 }
 
 .nouveautes .titreNouveautes:hover{
 	background-image: url(../images/titre_bloc_nouveaute_hover.png);
+}
+
+.nouveautes .prix{
+	display:block;
+	margin-left: auto;
+	margin-right: 10px;
+	position: relative;
+	font-family:"Arial", Helvetica, sans-serif;
+	font-size:20px;
+	float:right;
+	margin-top: 5px;
+	margin-bottom: 0px;
 }
