--- a/themes/witty/css/modules/homefeatured/homefeatured.css
+++ b/themes/witty/css/modules/homefeatured/homefeatured.css
@@ -80,10 +80,21 @@ section.produitsPhares{
 	background-image: url(images/titre_bloc_phare_normal.png);
 	height:77px;
 	width:324px;
-	cursor:default;
 }
 
 .produitsPhares .titreProduitsPhares:hover{
 	background-image: url(images/titre_bloc_phare_hover.png);
 }
 
+
+.produitsPhares .prix{
+	display:block;
+	margin-left: auto;
+	margin-right: 10px;
+	position: relative;
+	font-family:"Arial", Helvetica, sans-serif;
+	font-size:20px;
+	float:right;
+	margin-top: 5px;
+	margin-bottom: 0px;
+}
