--- a/modules/wittyblockbestsellers/static/css/wittyblockbestsellers.css
+++ b/modules/wittyblockbestsellers/static/css/wittyblockbestsellers.css
@@ -3,8 +3,8 @@ section.meilleuresVentes{
 	height:auto;
 	width:322px;
 	margin-top:0px;
-	margin-left: Opx;
-	margin-right: 12px;
+	margin-left: 0px;
+	margin-right: 0px;
 	position: relative;
 	border : solid 1px #e2dddb;
 	float:left;
