--- a/modules/wittyblocknewproducts/static/css/wittyblocknewproducts.css
+++ b/modules/wittyblocknewproducts/static/css/wittyblocknewproducts.css
@@ -3,7 +3,7 @@ section.nouveautes{
 	height:auto;
 	width:322px;
 	margin-top:0px;
-	margin-left: Opx;
+	margin-left: 0px;
 	margin-right: 12px;
 	position: relative;
 	border : solid 1px #e2dddb;
