--- a/themes/witty/css/modules/homeslider/bx_styles.css
+++ b/themes/witty/css/modules/homeslider/bx_styles.css
@@ -9,6 +9,8 @@
 .bx-wrapper {
 	margin-bottom:20px;
 	height:340px;
+	-webkit-box-shadow:  0px 0px 5px 5px #e2dddb;
+    box-shadow:  0px 0px 5px 5px #e2dddb;
 }
  
 /*next button*/
