--- a/themes/witty/css/global.css
+++ b/themes/witty/css/global.css
@@ -100,6 +100,7 @@ a{text-decoration: none;}
 .blocJeu .infos .titre{
 	font-size:14px;
 	margin-bottom:10px;
+	padding-bottom: 0px;
 	cursor:pointer;
 }
 
