--- a/themes/witty/css/modules/blocksearch/blocksearch.css
+++ b/themes/witty/css/modules/blocksearch/blocksearch.css
@@ -9,6 +9,17 @@
 	color:#9e9d9d;
 	margin-top:30px;
 }
+
+#search_block_filet{
+	display: block;
+    float: left;
+    height: 70px;
+    margin-left: 30px;
+    width: 300px;
+    padding-left: 30px;
+    border-left: solid 1px #e7e7e7;
+}
+
 #search_block_top{
 	display:block;
 	width:285px;
@@ -19,7 +30,6 @@
 	font-size:13px;
 	color:#9e9d9d;
 	margin-top:18px;
-	margin-left:60px;
 }
 
 #searchbox input[type=text]{
