--- a/themes/witty/css/global.css
+++ b/themes/witty/css/global.css
@@ -2257,7 +2257,7 @@ tr.subitem > td:first-child + td {
 	margin-top: 30px;
 }
 
-#mentions-legales p, span{
+#mentions-legales p, #mentions-legales span{
 	font-family:"Arial", Helvetica, sans-serif;
 	font-size:15px;
 	color:#797c7d;
