--- a/themes/witty/css/product.css
+++ b/themes/witty/css/product.css
@@ -345,9 +345,10 @@ a.pack_price{
 }
 
 #bigpic{
-	width:600px;
+	width:100%;
+	/*width:600px;
 	margin-top:-100px;
-	margin-left: -55px;
+	margin-left: -55px;*/
 }
 
 #primary_block{
