--- a/themes/witty/css/global.css
+++ b/themes/witty/css/global.css
@@ -972,6 +972,17 @@ table#cart_summary #total_price_container {
 	border-bottom:1px solid #999;
 }
 
+#vouchers .name{
+	font-size:11px;
+	font-weight: bold;
+	color: #333;
+}
+
+#vouchers .quantity ,#vouchers .price{
+	font-size:11px;
+	color: #222;
+}
+
 .cart_voucher h4,
 .cart_voucher p {float:left;}
 .cart_voucher h4 {
