--- a/themes/witty/css/product_list.css
+++ b/themes/witty/css/product_list.css
@@ -116,12 +116,10 @@
 
 .liste .pack .image{
 	display:block;
-	margin-left: 0px;
-	margin-right: 15px;
+	margin-left: auto;
+	margin-right: auto;
 	position: relative;
 	height:135px;
-	width:310px;
-	float:left;
 	cursor:pointer;
 	margin-bottom:15px;
 }
