--- a/themes/witty/css/modules/blockcart/blockcart.css
+++ b/themes/witty/css/modules/blockcart/blockcart.css
@@ -5,13 +5,12 @@
 	display: none;
 }
 #header #cart_block {
-	z-index: 10;
 	display:none;
 	position: absolute;
-	right: 0;
-	top: 65px;
+	right: -1px;
+	top: 115px;
 	height: auto;
-	width: 200px;
+	width: 266px;
 	-moz-border-bottom-right-radius: 3px;
 	-moz-border-bottom-left-radius: 3px;
 	-webkit-border-bottom-right-radius: 3px;
@@ -20,7 +19,8 @@
 	border-bottom-left-radius: 3px;
 	box-shadow: 0 1px 0 #C6C6C6;
 	background:#eee;
-	margin: 6px 7px 0 0;
+	float: right;
+	z-index: 10;
 }
 #cart_block.cart_block_hover {display:block}
 #cart_block h4 span {
@@ -29,7 +29,7 @@
 	text-transform: none;
 	background-position: left top;
 	background-repeat: no-repeat;
-	cursor: pointer
+	cursor: pointer;
 }
 
 #cart_block  .block_content {padding:8px 8px 16px 8px;}
