--- a/themes/witty/css/modules/blocksearch/blocksearch.css
+++ b/themes/witty/css/modules/blocksearch/blocksearch.css
@@ -22,36 +22,36 @@
 
 #search_block_top{
 	display:block;
-	width:285px;
+	width:533px;
 	float:left;
-	margin-right: 0px;
+	margin-left: 15px;
 	position: relative;
 	font-family:"Arial", Helvetica, sans-serif;
-	font-size:13px;
+	font-size:15px;
 	color:#9e9d9d;
-	margin-top:18px;
+	margin-top:55px;
 }
 
 #searchbox input[type=text]{
 	float:left;
 	border:0;
-	width:249px;
-	height:35px;
-	background:url(images/champ_rechercher.png) top left no-repeat;
+	width:400px;
+	height:60px;
+	background:url(images/champ_rechercher_normal.png) top left no-repeat;
 	color:#9e9d9d;
-	padding:5px 0 0 40px;
+	padding:10px 0 0 70px;
 }
 
 #searchbox input[type=text]:focus{
-	background:url(images/champ_rechercher.png) top left no-repeat;
+	background:url(images/champ_rechercher_normal.png) top left no-repeat;
 }
 
 #searchbox input[type=submit]{
 	float:left;
 	border:0;
-	width:35px;
-	height:35px;
-	background:url(images/champ_rechercher.png) top right no-repeat;
+	width:130px;
+	height:60px;
+	background:url(images/champ_rechercher_normal.png) top right no-repeat;
 	cursor:pointer;
 }
 
